# lightning-diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: stable_diffusion.yaml  stable_diffusion_controlnet.yaml  stable_diffusion_data.yaml  stable_diffusion_ip_adapter.yaml  stable_diffusion_ip_adapter_plus.yaml  stable_diffusion_model.yaml  stable_diffusion_xl_controlnet.yaml  stable_diffusion_xl_data.yaml  stable_diffusion_xl_ip_adapter.yaml  stable_diffusion_xl_ip_adapter_plus.yaml  stable_diffusion_xl_model.yaml  trainer.yaml
config/animate_anyone/: animate_anyone_pose2img.yaml  animate_anyone_pose2vid.yaml
config/animatediff/: animatediff.yaml
config/cogvideox/: cogvideox.yaml  cogvideox_wds.yaml
config/controlnet/: flux_controlnet.yaml  pixart_controlnet.yaml  stable_diffusion_controlnet.yaml  stable_diffusion_xl_controlnet.yaml
config/experiment/: stable_diffusion.yaml  stable_diffusion_xl.yaml
config/inpaint/: stable_diffusion_inpaint.yaml
config/ip_adapter/: stable_diffusion_ip_adapter.yaml  stable_diffusion_ip_adapter_plus.yaml  stable_diffusion_xl_ip_adapter.yaml  stable_diffusion_xl_ip_adapter_plus.yaml
config/text_to_image/: flux.yaml  pixart_alpha.yaml  pixart_sigma.yaml  stable_diffusion.yaml  stable_diffusion_precompute.yaml  stable_diffusion_xl.yaml
scripts/: main.py  main_nocli.py  precompute.py
src/lightning_diffusion/: __init__.py
src/lightning_diffusion/callback/: visualization.py
src/lightning_diffusion/data/: __init__.py  controlnet_datasets.py  data_sampler.py  datasets.py  hf_datasets.py  hf_image_datasets.py  hf_image_text_datasets.py  hf_modules.py  modules.py  t2i_datasets.py  transforms.py  wds_datasets.py  wds_modules.py
src/lightning_diffusion/data/animate_anyone/: dataset.py
src/lightning_diffusion/data/animatediff/: dataset.py
src/lightning_diffusion/data/cogvideox/: dataset.py
src/lightning_diffusion/model/: __init__.py  stable_diffusion.py  stable_diffusion_controlnet.py  stable_diffusion_ip_adapter.py  stable_diffusion_xl.py  stable_diffusion_xl_controlnet.py  stable_diffusion_xl_ip_adapter.py
src/lightning_diffusion/model/animate_anyone/: animate_anyone.py
src/lightning_diffusion/model/animatediff/: animatediff.py
src/lightning_diffusion/model/cogvideox/: cogvideox.py
src/lightning_diffusion/model/controlnet/: flux_controlnet.py  pixart_controlnet.py  stable_diffusion_xl_controlnet.py
src/lightning_diffusion/model/inpaint/: stable_diffusion_inpaint.py
src/lightning_diffusion/model/ip_adapter/: stable_diffusion_ip_adapter.py  stable_diffusion_xl_ip_adapter.py
src/lightning_diffusion/model/text_to_image/: flux.py  pixart.py  pixart_alpha.py  stable_diffusion.py  stable_diffusion_xl.py
src/lightning_diffusion/utils/: utils.py
(+21 files in other folders)
