[project]
name = "lightning-diffusion"
version = "0.1.0"
description = "lightning modules for diffusion models"
authors = [
    { name = "hirune924", email = "" }
]
dependencies = [
    "lightning[pytorch-extra]>=2.2.4",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "datasets>=2.19.0",
    "transformers>=4.40.1",
    "accelerate>=0.30.0",
    "tensorboard>=2.16.2",
    "omegaconf>=2.3.0",
    "peft>=0.10.0",
    "scipy>=1.13.0",
    "ftfy>=6.2.0",
    "bs4>=0.0.2",
    "sentencepiece>=0.2.0",
    "opencv-python>=4.9.0.80",
    "wandb>=0.17.1",
    "webdataset>=0.2.86",
    "loguru>=0.7.2",
    "decord>=0.6.0",
    "einops>=0.8.0",
    "deepspeed>=0.15.1",
    "autogen>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true
